feat: refactor code to be compatible with postgres models
