# backend/core_api/src/main/java/com/kf/touchbase/models/domain/MissonType.java
@@ -1,5 +1,0 @@
-package com.kf.touchbase.models.domain;
-
-public enum MissonType {
-    PERIODIC;
-}
