# backend/core_api/src/main/java/com/kf/touchbase/rest/BaseController.java
@@ -1,10 +1,10 @@
 package com.kf.touchbase.rest;
 
-import com.kf.touchbase.models.domain.Success;
+import com.kf.touchbase.models.domain.postgres.Success;
 import com.kf.touchbase.mappers.BaseMapper;
-import com.kf.touchbase.models.domain.Base;
+import com.kf.touchbase.models.domain.neo4j.Base;
 import com.kf.touchbase.models.dto.BaseReq;
-import com.kf.touchbase.services.neo4j.BaseServiceImpl;
+import com.kf.touchbase.services.neo4j.BaseService;
 import com.kf.touchbase.utils.AuthUtils;
 import io.micronaut.http.MediaType;
 import io.micronaut.http.annotation.*;
@@ -13,58 +13,46 @@ import io.micronaut.security.authentication.Authentication;
 import io.micronaut.security.rules.SecurityRule;
 import lombok.RequiredArgsConstructor;
 
+import java.util.UUID;
+
 @RequiredArgsConstructor
 @Controller("/api/v1/base/")
 @Secured(SecurityRule.IS_AUTHENTICATED)
 public class BaseController {
 
-    private final BaseServiceImpl baseService;
+    private final BaseService baseService;
 
     private final BaseMapper baseMapper;
-
-    @Get
-    @Produces(MediaType.APPLICATION_JSON)
-    public Iterable<Base> getBases() {
-        return baseService.findAll();
-    }
 
     @Post
     @Produces(MediaType.APPLICATION_JSON)
     public Base postBase(Authentication authentication, @Body BaseReq baseReq) {
         var base = baseMapper.baseReqToBase(baseReq);
-        return baseService.createBase(AuthUtils.getUsernameFromAuth(authentication), base);
-    }
-
-    @Put
-    @Produces(MediaType.APPLICATION_JSON)
-    @Secured({"ROLE_ADMIN"})
-    public Base putBase(@Body BaseReq baseReq) {
-        var base = baseMapper.baseReqToBase(baseReq);
-        return baseService.createOrUpdate(base);
+        return baseService.createBase(AuthUtils.getUserIdFromAuth(authentication), base);
     }
 
     @Put
     @Produces(MediaType.APPLICATION_JSON)
     public Base patchBase(Authentication authentication, @Body BaseReq baseReq) {
         var base = baseMapper.baseReqToBase(baseReq);
-        return baseService.patchBase(AuthUtils.getUsernameFromAuth(authentication), base);
+        return baseService.patchBase(AuthUtils.getUserIdFromAuth(authentication), base);
     }
 
-    @Post("{baseId}/user/{username}")
+    @Post("{baseId}/user/{authId}")
     @Produces(MediaType.APPLICATION_JSON)
-    public Base addUserToBaseAsOwner(Authentication authentication, String baseId, String username) {
-        return baseService.addUserToBaseAsOwner(AuthUtils.getUsernameFromAuth(authentication), username, baseId);
+    public Base addUserToBaseAsOwner(Authentication authentication, String baseId, String authId) {
+        return baseService.addUserToBaseAsOwner(AuthUtils.getUserIdFromAuth(authentication), authId, baseId);
     }
 
-    @Delete("{baseId}/user/{username}")
+    @Delete("{baseId}/user/{authId}")
     @Produces(MediaType.APPLICATION_JSON)
-    public Base removeUserFromBaseAsOwner(Authentication authentication, String baseId, String username) {
-        return baseService.deleteUserFromBaseAsOwner(AuthUtils.getUsernameFromAuth(authentication), username, baseId);
+    public Base removeUserFromBaseAsOwner(Authentication authentication, String baseId, String authId) {
+        return baseService.deleteUserFromBaseAsOwner(AuthUtils.getUserIdFromAuth(authentication), authId, baseId);
     }
 
     @Delete("{baseId}")
     @Produces(MediaType.APPLICATION_JSON)
-    public Success makeBaseInactive(Authentication authentication, String baseId) {
-        return baseService.makeBaseInactive(AuthUtils.getUsernameFromAuth(authentication), baseId);
+    public Success makeBaseInactive(Authentication authentication, UUID baseId) {
+        return baseService.makeBaseInactive(AuthUtils.getUserIdFromAuth(authentication), baseId);
     }
 }
